--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,52 @@
-jboss/server/all/deploy/project.ext
-jboss/server/default/deploy/project.ext
-jboss/server/minimal/deploy/project.ext
-jboss/server/all/log/*.log
-jboss/server/all/tmp/**/*
-jboss/server/all/data/**/*
-jboss/server/all/work/**/*
-jboss/server/default/log/*.log
-jboss/server/default/tmp/**/*
-jboss/server/default/data/**/*
-jboss/server/default/work/**/*
-jboss/server/minimal/log/*.log
-jboss/server/minimal/tmp/**/*
-jboss/server/minimal/data/**/*
-jboss/server/minimal/work/**/*
+target
+.classpath
+.project
+.settings/
 
-# deployed package files #
+# Eclipse
+.classpath
+.project
+.settings/
 
-*.DEPLOYED
+# Maven
+# log/
+target/
+opt/
+
+# Prebuilt settings file
+.env
+
+
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# custom package files
+
+*.sar
+*.par
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+builds/postgresql-dist/postgresql/data
+builds/postgresql-dist/postgresql/backups
+builds/postgresql-dist/postgresql/tablespaces
