--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ hs_err_pid*
 builds/postgresql-dist/postgresql/data
 builds/postgresql-dist/postgresql/backups
 builds/postgresql-dist/postgresql/tablespaces
+builds/wildfly-dist/wildfly/deployments
