--- a/deploy/dev/docker-compose-dev-jboss52.yaml
+++ b/deploy/dev/docker-compose-dev-jboss52.yaml
@@ -40,7 +40,14 @@ services:
       - LONG_APP_NAME=seycon
       - SHORT_APP_NAME=sc
       - PGTABLESPACES=/var/lib/postgresql/data/tablespaces
-
-
-
-    
+  #Nginx Service
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-${LONG_APP_NAME_LOWER}
+    hostname: nginx-${LONG_APP_NAME_LOWER}
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ../../builds/nginx-dist/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
